--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -19,8 +19,8 @@ fulldata <- read.csv("activity.csv",header = T)
 ```
 
 2. Process/transform the data (if necessary) into a format suitable for your analysis   
-The date column is transformed from Factor to Date to ease later processing.
-The result is a 17568 ibservation dataframe with 3 columns.
+The date column is transformed from Factor to Date to ease later processing.   
+The result is a 17568 observations dataframe with 3 columns.
 ```{r}
 fulldata$date <- as.Date(fulldata$date,format="%Y-%m-%d")
 str(fulldata)
@@ -48,9 +48,11 @@ hist(result$steps,col = "blue",breaks = 10,main = "Histogram of total number of 
 3. The mean and median number of steps taken per day are:   
 
 ```{r}
-median(result$steps)
-mean(result$steps)
+result_median<-median(result$steps)
+result_mean<-mean(result$steps)
 ```
+Median:   `r prettyNum(result_median)`   
+Mean;     `r prettyNum(result_mean)`
 
 ## What is the average daily activity pattern?
 
@@ -78,8 +80,8 @@ The maximum value and the interval number with the maximun value of average dail
      sum(is.na(fulldata$steps))
 ```
 2. Devise a strategy for filling in all of the missing values in the dataset. 
-I decided to substitute NA with the average of the 5 minute interval of all days.   
-So I merge the full data frame with NA togheter with the result from the previous steps representing the average of the five minute interval amont all days.
+I decided to substitute `NA` with the average of the 5 minute interval of all days.   
+So I merge the full data frame with `NA` togheter with the result from the previous steps representing the average of the five minute interval amont all days.
 
 ```{r}
      newfulldata<- fulldata
@@ -88,32 +90,30 @@ So I merge the full data frame with NA togheter with the result from the previou
 
 3. Create a new dataset that is equal to the original dataset but with the missing data filled in.  
 
-Then the new dataset "newfulldata" is created substituting NA on the first column (steps)
+Then the new dataset `newfulldata` is created substituting `NA` on the first column (steps)
 
 ```{r}
      newfulldata[is.na(newfulldata),][,1] <- temp[order(as.Date(temp$date.x,format="%Y-%m-%d")),][,4]
 ```
-     
-```{r}
-     newfulldata <- data.table(newfulldata)
-     result3 <- newfulldata[,lapply(.SD,sum),by=date]
-```
 
 4. Make a histogram of the total number of steps taken each day and Calculate and report the mean and median total number of steps taken per day. Do these values differ from the estimates from the first part of the assignment? What is the impact of imputing missing data on the estimates of the total daily number of steps?   
 
-```{r ,fig.height=4, fig.width=5}
-     hist(result3$steps,breaks = 10, col = "green", main = "Histogram of total number of steps per day without NA",xlab = "Total Number of steps", ylab = "Number of days (Frequency)",,xlim =c(0,25000))
-     median(result3$steps)
-     mean(result3$steps)
+```{r fig.height=4, fig.width=5}
+newfulldata <- data.table(newfulldata)
+result3 <- newfulldata[,lapply(.SD,sum),by=date]
+hist(result3$steps,breaks = 10, col = "green", main = "Histogram of total number of steps per day without NA",xlab = "Total Number of steps", ylab = "Number of days (Frequency)",,xlim =c(0,25000))
 ```
 
-The mean doesn't change significantly from the calculated ones from the first step. That is because I used the averages to substitute the NA and thus the means remain the same. The median changes slightly because more observations have been added and that might alter slightly the median.
+The mean is `r prettyNum(mean(result3$steps))` and doesn't change significantly from the calculated ones from the first step. That is because I used the averages to substitute the NA and thus the means remain the same. The median is `r prettyNum(median(result3$steps))` and changes slightly because more observations have been added and that might alter slightly the median.
 
 ```{r}
 median(result3$steps) - median(result$steps)
 mean(result3$steps) - mean(result$steps)
 ```
+
+
 ## Are there differences in activity patterns between weekdays and weekends?
+   
 1. Create a new factor variable in the dataset with two levels – “weekday” and “weekend” indicating whether a given date is a weekday or weekend day.
 
 I add a column with the weekday values, then I use string function "sub" to substitute weekdays with only two values ("weekday","weekend").   
